--- a/iOS/Objective-C高级编程/内存管理/3-2 -  深入理解 ARC (OC高级编程 73 - 84 ).md
+++ b/iOS/Objective-C高级编程/内存管理/3-2 -  深入理解 ARC (OC高级编程 73 - 84 ).md
@@ -502,4 +502,25 @@ objc_autorelease(obj);
 objc_autoreleasePoolPop(pool);
 ```
 
+这与苹果的 autorelease 实现中的说明(参考内存管理3-1)完全相同。虽然 ARC 和 MRC 时，其在源码上有所不同，但 autorelease 的功能完全一样。
+
+
+```
+@autoreleasepool {
+	id __autoreleasing obj = [NSMutableArray array];
+}
+```
+
+这与前面的源代码有何不同呢？
+
+```
+<!--编译器的模拟代码-->
+id pool = objc_autoreleasePoolPush();
+id obj = objc_msgSend(NSMutableArray, @selector(array));
+objc_retainAutoreleasedReturnValue(obj);
+objc_autorelease(obj);
+objc_autoreleasePoolPop(pool);
+```
+
+虽然持有对象的方法从 alloc 方法变为 objc_retainAutoreleasedReturnValue 函数，但注册 autoreleasePool 的方法没有改变，仍是 objc_autorelease 函数。
 
